--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <h1>WDThor's Todo List</h1>
         </header>
         <form>
-            <input type="text" class="todo-input" />
+            <div class="input-container">
+                <input type="text" class="todo-input" />
+                <em class="error-message">Add at least 2 characters</em>
+            </div>
             <button class="todo-button" type="submit">
                 <i class="fas fa-plus-square"></i>
             </button>
